--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,5 +1,10 @@
 ---
 // Henter parametrene fra Astro.props
-const { href="#", target="_self"} = Astro.props; 
+const { href = "#", target = "_self" } = Astro.props;
 ---
-<a href={href} class="underline" target={target}><slot /></a>
+
+<a
+  href={href}
+  class="underline text-white text-xs text-sm sm:text-base md:text-base lg:text-base xl:text-xl"
+  target={target}><slot /></a
+>
