--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -4,12 +4,13 @@ const { teksttype = "brødtekst", stylingclasses = "" } = Astro.props;
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
-  brødtekst: "max-w-[50ch] text-white text-[clamp(2.6rem,2.8cqw,1.8rem)] mt-4",
-  meta: "text-white text-xs text-sm sm:text-base md:text-base lg:text-base xl:text-xl",
+  brødtekst:
+    "max-w-[30ch] text-primary-500  text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl",
+  meta: "text-white text-xs sm:text-sm md:text-sm lg:text-base xl:text-xl",
   bigCirkel:
-    "mt-2 text-white text-sm sm:text-base md:text-xl lg:text-2xl xl:text-4xl",
+    "mt-2 text-white text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl",
   samllCirkel:
-    "text-white text-center italic text-[clamp(0.1rem,2.6cqw,2.4rem)]",
+    "text-white text-center italic text-sm sm:text-base md:text-lg lg:text-2xl xl:text-3xl",
 };
 ---
 
