--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -12,11 +12,12 @@ const Htmlheading = htmlheading;
 const sizeClasses = {
   large:
     "text-7xl sm:text-[8rem] md:text-[9rem] lg:text-[12rem] xl:text-[16rem] 2xl:text-[20rem] text-primary-500 duration-200 ease-out",
-  medium: "text-primary-500 leading-none text-[clamp(5rem,4.8cqw,2.8rem)]",
+  medium:
+    "text-white leading-none  text-3xl sm:text-4xl md:text-4xl lg:text-5xl xl:text-6xl",
   small:
-    "text-white mb-[10%] text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-6xl",
+    "text-white mb-[10%] text-xl sm:text-2xl md:text-3xl lg:text-4xl xl:text-5xl",
   xsmall:
-    "text-primary-500  text-xl sm:text-2xl md:text-2xl lg:text-3xl xl:text-4xl",
+    "text-primary-500  text-base sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl",
 };
 
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige skrifttyper.
