--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -5,6 +5,6 @@ const { href = "#", target = "_self" } = Astro.props;
 
 <a
   href={href}
-  class="underline text-white text-xs text-sm sm:text-base md:text-base lg:text-base xl:text-xl"
+  class="underline text-white text-xs sm:text-sm md:text-sm lg:text-base xl:text-xl"
   target={target}><slot /></a
 >
