--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,9 @@ const links = {
 };
 ---
 
-<section class="grid grid-cols-12 items-centermx-[3%] md:mx-[5%] mt-20 mb-5">
+<section
+  class="grid grid-cols-12 items-centermx-[3%] bg-primary-500 lg:bg-transparent px-[5%] lg:pt-20"
+>
   <div
     class="col-start-1 col-end-9 flex items-center gap-[clamp(0.6rem,2cqw,1rem)]"
   >
@@ -93,23 +95,17 @@ const links = {
     <p
       class="ml-[clamp(0.5rem,2cqw,1.25rem)] font-display text-[clamp(1.1rem,3.2cqw,1.8rem)] text-white"
     >
-      ByXia.dk · August 2025
+      ByXia.dk - August 2025
     </p>
   </div>
 
   <!-- Højre: “by XIA” -->
-  <p
-    class="col-start-9 col-end-13 justify-self-end
-              flex items-baseline gap-[0.4em] leading-none"
-  >
-    <span
-      class="font-display text-white
-                   text-[clamp(0.9rem,2.4cqw,1.2rem)]"
+  <p class="col-start-9 col-end-13 justify-self-end items-baseline">
+    <span class="font-black text-white text-[clamp(0.9rem,2.4cqw,1.2rem)]"
       >by</span
     >
     <span
-      class="font-display uppercase text-white
-                   text-[clamp(1.6rem,5cqw,2.6rem)]"
+      class="font-black uppercase text-white text-[clamp(1.6rem,5cqw,2.6rem)]"
       >XIA</span
     >
   </p>
