--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -10,7 +10,7 @@ const sizeClasses = {
   bigCirkel:
     "mt-2 text-white text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl",
   samllCirkel:
-    "text-white text-center italic text-sm sm:text-base md:text-lg lg:text-2xl xl:text-3xl",
+    "text-white text-center italic text-xm sm:text-base md:text-lg lg:text-2xl xl:text-3xl",
 };
 ---
 
