--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
     background-size:100% auto;
     background-repeat:no-repeat;
   "
-    class="bg-red-500"
+    class="bg-primary-500"
   >
     <header>
       <Header />
