ændre farver på tekst

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,8 +24,10 @@ const currentPath = pathname.slice(1); // remove the first "/"
         </li>
       </ul>
     </nav>
-    <button id="burgermenu" class="lg:hidden" x-on:click="showmenu = ! showmenu"
-      >Menu</button
+    <button
+      id="burgermenu"
+      class="lg:hidden text-white"
+      x-on:click="showmenu = ! showmenu">Menu</button
     >
   </div>
 
@@ -51,7 +53,7 @@ const currentPath = pathname.slice(1); // remove the first "/"
           href="/komponentbibliotek/"
           class={currentPath === "komponentbibliotek/"
             ? "font-bold text-white"
-            : ""}>Komponentbibliotek</a
+            : " text-white"}>Komponentbibliotek</a
         >
       </li>
     </ul>
