--- a/src/components/Text.astro
+++ b/src/components/Text.astro
@@ -5,7 +5,7 @@ const { teksttype = "brødtekst", stylingclasses = "" } = Astro.props;
 //Definer den styling (Tailwind classes), der gør sig gældende for de forskellige størrelser.
 const sizeClasses = {
   brødtekst:
-    "max-w-[30ch] text-primary-500  text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl",
+    "max-w-[30ch] text-white md:text-primary-500  text-lg sm:text-xl md:text-2xl lg:text-3xl xl:text-4xl",
   meta: "text-white text-xs sm:text-sm md:text-sm lg:text-base xl:text-xl",
   bigCirkel:
     "mt-2 text-white text-sm sm:text-base md:text-lg lg:text-xl xl:text-2xl",
